Add code for release 2.9.2